Tue Jan 30 22:30:26 2001  George Lebl <jirka@5z.com>

	* panel_config.c: prevent infinite loop with background pixmap
	  setting, but this needs more work

	* basep-widget.c: follow style_set signal and reset styles on the
	  subwidgets to follow theme

	* panel.c: make sure button #3 gets through on panels, so that menu
	  gets displayed

Thu Jan 25 04:10:03 2001  George Lebl <jirka@5z.com>

	* panel.c: 1st button click on  the panel space also starts a panel
	  drag

Thu Jan 25 03:01:19 2001  George Lebl <jirka@5z.com>

	* panel_config.[ch], drawer.c: added the level to all other panel
	  and drawer configurations

Wed Jan 24 00:31:52 2001  George Lebl <jirka@5z.com>

	* global-keys.c: actually make this work, apperently we don't get
	  things out of events now in filters, we must use the raw xevents

Sat Jan 06 18:18:57 2001  George Lebl <jirka@5z.com>

	* extern.c: some cleanups, recycle the exception when fail to
	  add_applet on a booter

	* foobar-widget.c, basep-widget.c:  queue_resize after a realize
	  so that if the WM misplaces us we will replace ourselves back.

Tue Jan 02 20:44:47 2001  George Lebl <jirka@5z.com>

	* extern.c:  Implement launch_an_applet.  It's very simple really,
	  activate the applet, and then if we get an applet with such a
	  goad_id, use the PanelAppletBooter interface to bootstrap it, and
	  leave the rest to whatever wanted the applet in the first place.

	* button-widget.c: fix warning 

Sun Dec 31 19:14:47 2000  George Lebl <jirka@5z.com>

	* panel-widget.[ch], applet.c, extern.c, panel.c:  Allow
	  the drag_start to be started off at a specific drag offset,
	  and pass the current drag offset when going over to another
	  panel.  Also for move from the menu, make the offset the center of
	  the applet.

Sun Dec 31 18:43:24 2000  George Lebl <jirka@5z.com>

	* panel-widget.c:  Use the new movememnt style for both switch and
	  push move.  Instead of waiting until the boundary is crossed, the