@@ -959,7 +959,7 @@ GnomePlugin GNOME_Plugin_info = { applets_list, NULL };
       <para>
         Here's a simple makefile you can use (this one is for the fish applet)
 	if you want to compile applets outside of the gnome-core source tree. 
-	It was sent to me by John Ellis &lt;johne@bellatlantic.net&gt.
+	It was sent to me by John Ellis &lt;johne@bellatlantic.net&gt;
       </para>
 
       <para>
