@@ -1,3 +1,10 @@
+Wed Jan 31 03:03:40 2001  George Lebl <jirka@5z.com>
+
+	* panel-util.c:  Fix setting of background colors in different
+	  themes.  So that changing themes effects things.
+
+	* doc/Makefile.am, doc/panel.sgml:  Fix build problem.
+
 Tue Jan 30 22:30:26 2001  George Lebl <jirka@5z.com>
 
 	* panel_config.c: prevent infinite loop with background pixmap
